# pico

./: .gitignore  LICENSE  README.md  pico.code-workspace
hello_cpp/: test.c
hello_sdk/: CMakeLists.txt
micropython/: README.md  adc.py  button.py  hello.py  hello_pico.py  hobbes.pbm  led.py  midi_out.py  oled.py  sh1107.py  ssd1306.py
midi_test/: CMakeLists.txt
midi_test/src/: main.c  midi.h  tusb_config.h
